--- a/BDProject/templates/base.html
+++ b/BDProject/templates/base.html
@@ -12,7 +12,7 @@
 
   			<h4 class="my-0 mr-md-auto font-weight-normal" >Simple blog</h4>
 
-  			<a class="btn btn-outline-primary" href="#">Git hub</a>
+  			<a class="btn btn-outline-primary" href="https://github.com/Waldij/DB-Project">Git hub</a>
 
 		</div>
 
