--- a/BDProject/templates/base.html
+++ b/BDProject/templates/base.html
@@ -34,7 +34,7 @@
       <div class="col-6 col-md">
         <h5>Other links</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Git hub</a></li>
+          <li><a class="text-muted" href="https://github.com/Waldij/DB-Project">Git hub</a></li>
           <li><a class="text-muted" href="https://vk.com/waldij">VK</a></li>
 
         </ul>
